# zephyr-west-agent

./: .editorconfig  .gitignore  README.md
.claude/skills/zephyr-qrb2210/: SKILL.md
.claude/skills/zephyr-qrb2210/references/: app-structure.md  board-porting.md  boot-flash-fastboot.md  debug-loop.md  devops-qol.md  execution-models.md  qcm2290-hal-devicetree.md  test-engineering.md  west-workspace.md
.claude/skills/zephyr-qrb2210/scripts/: mkbootimg-zephyr.sh  triage.sh
.claude/skills/zephyr-versal/: SKILL.md
.claude/skills/zephyr-versal/references/: app-structure.md  board-porting.md  debug-loop.md  devops-qol.md  jtag-xsdb.md  test-engineering.md  versal-hal-devicetree.md  west-workspace.md
.claude/skills/zephyr-versal/scripts/: triage.sh
agent/: README.md  conftest.py  pyproject.toml  zephyr-agent.toml.example
agent/tests/: test_cli.py  test_config.py  test_executor.py  test_safety.py  test_shell.py  test_tools.py
agent/zephyr_agent/: __init__.py  cli.py  config.py  executor.py  llm.py  safety.py  shell.py
agent/zephyr_agent/tools/: __init__.py  lopper.py  twister.py  west.py  xsdb.py
